<resources>
    <string name="app_name">Clipoid</string>
    <string name="helper_qr_code_instruction">1. Open ClipAngel\n2. Move to: Clip -> Clip channel ->
        Connect recipient\n3. Set flag in show position\n4. Scan QR code</string>
    <string name="copied_alert">Clip was copied</string>
    <string name="copy">Copy</string>
    <string name="created_date">Created date</string>
    <string name="delete">Delete</string>
    <string name="identifier">Channel identifier</string>
    <string name="clip_count">Count of clips</string>
    <string name="channels">Channels</string>
    <string name="clips">Clips</string>
    <string name="settings">Settings</string>
    <string name="my_channels">My channels</string>
    <string name="attach_new_channel">Connect to channel</string>
    <string name="no_channels_found">No channels found</string>
    <string name="can_create_new_channel">You can create a new channel right now!</string>
    <string name="category_all">All clips</string>
    <string name="category_favorite">Favorite</string>
    <string name="category_protected">Protected clips</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="favorite">Favorite</string>
    <string name="secured">Protected</string>
    <string name="no_clips_found">No one clips found</string>
    <string name="from">from_caption</string>
    <string name="clip_is_deleted">Clip is deleted!</string>
    <string name="new_clip_received">From %s</string>
    <string name="cancel">Cancel</string>
    <string name="unblock_clip">Unblock clip</string>
    <string name="search">Search</string>
    <string name="search_hint">Type some text \.\.\.</string>
    <string name="unblock_private">Unblock private category</string>
    <string name="app_version_text">Version</string>
    <string name="about">About</string>
    <string name="app_device_identifier">Device identifier</string>
    <string name="storage_text">Storage</string>
    <string name="counting_of_stored_clips">Counting of stored clips</string>

    <string name="unlimited">Unlimited</string>
    <string name="five_clips">5 clips</string>
    <string name="ten_clips">10 clips</string>
    <string name="twenty_clips">20 clips</string>

    <string name="channel_registration">Channel registration</string>
    <string name="scan_qr_code">Scan QR code</string>


</resources>